tests/tooling/fixtures/native/recovery/positive/increment_decrement_basic.objc3
module IncrementDecrementBasic;

fn main() -> i32 {
  let value = 1;
  value++;
  ++value;
  value--;
  --value;
  return value;
}